buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
    }
}

plugins {
    id 'groovy'
    id 'org.springframework.boot' version "$springBootVersion"
//    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'project-report'  // htmlDependencyReport
}

group 'com.playground'
version '1.0-SNAPSHOT'

sourceCompatibility = 14
targetCompatibility = 14

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.codehaus.groovy:groovy-all:3.0.3'
    implementation 'org.projectlombok:lombok:1.18.12'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
    implementation 'org.apache.commons:commons-collections4:4.4'

    implementation "org.springframework:spring-core:$springVersion"
    implementation "org.springframework:spring-webmvc:$springVersion"
    implementation "org.springframework.boot:spring-boot:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"

    testImplementation 'org.spockframework:spock-core:2.0-M2-groovy-3.0'
    testImplementation 'net.bytebuddy:byte-buddy:1.10.13'
}

test {
    useJUnitPlatform()
    afterSuite { desc, result ->
        if (!desc.parent) {
            if (result.testCount == 0) {
                throw new IllegalStateException("No tests were found. Failing the build.")
            }
        }
    }
}